--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     build:
       context: .
       dockerfile: python_env/Dockerfile
+    restart: unless-stopped
     ports:
       - 8080:80
     volumes:
@@ -17,6 +18,7 @@ services:
 
   geodb:
     image: mongo
+    restart: unless-stopped
     volumes:
       - "./mongodata:/data/db"
     ports:
